[project]
name = "binglish"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaohaibiao",email = "xiaohaibiao@ruijie.com.cn"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
binglish = "binglish.binglish:main"

[tool.poetry-pyinstaller-plugin.include]
"src/assert/binglish.ico" = "."

[tool.poetry-pyinstaller-plugin.scripts]
binglish = {source="src/binglish/binglish.py", type="onefile", icon="src/assert/binglish.ico", windowed=true, add_version=true, hiddenimport="pystray._win32"}
